errors.txt
   Compiling compactrs v0.1.0 (C:\Users\ireddragonicy\RustroverProjects\compactrs)
error[E0432]: unresolved import `windows::Win32::Graphics::Gdi::GetClientRect`
  --> src\gui\settings.rs:15:157
   |
15 | ...t, HGDIOBJ, InvalidateRect, FillRect, GetClientRect};
   |                                          ^^^^^^^^^^^^^ no `GetClientRect` in `Win32::Graphics::Gdi`

warning: unused imports: `AtomicU64` and `AtomicUsize`
  --> src\gui\window.rs:35:43
   |
35 | use std::sync::{Arc, atomic::{AtomicBool, AtomicU64, AtomicUsize, Ordering}};
   |                                           ^^^^^^^^^  ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::mpsc::Sender`
  --> src\gui\window.rs:36:5
   |
36 | use std::sync::mpsc::Sender;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `get_real_file_size` and `get_wof_algorithm`
  --> src\gui\window.rs:48:40
   |
48 | use crate::engine::wof::{WofAlgorithm, get_real_file_size, get_wof_algorithm};
   |                                        ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

warning: unused import: `ignore::WalkBuilder`
  --> src\gui\window.rs:53:5
   |
53 | use ignore::WalkBuilder;
   |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `InvalidateRect`
  --> src\gui\settings.rs:15:131
   |
15 | ..., SetBkColor, CreateSolidBrush, HDC, DeleteObject, HGDIOBJ, InvalidateRect, FillRect, GetClientRect};
   |                                                                ^^^^^^^^^^^^^^

warning: unused import: `WM_CTLCOLOREDIT`
  --> src\gui\settings.rs:18:66
   |
18 | use windows::Win32::UI::WindowsAndMessaging::{WM_CTLCOLORSTATIC, WM_CTLCOLOREDIT, WM_CTLCOLORBTN, WM_ERASEBKGND};
   |                                                                  ^^^^^^^^^^^^^^^

warning: unused import: `Result`
 --> src\gui\console.rs:2:32
  |
2 | use windows::core::{w, PCWSTR, Result};
  |                                ^^^^^^

warning: unused import: `HINSTANCE`
 --> src\gui\console.rs:3:65
  |
3 | use windows::Win32::Foundation::{HWND, LPARAM, LRESULT, WPARAM, HINSTANCE, COLORREF};
  |                                                                 ^^^^^^^^^

warning: unused imports: `DispatchMessageW`, `GetMessageW`, `MSG`, `PostQuitMessage`, `SWP_NOACTIVATE`, `SWP_NOMOVE`, `TranslateMessage`, and `WM_SETFONT`
  --> src\gui\console.rs:8:53
   |
 8 |     CreateWindowExW, DefWindowProcW, DestroyWindow, DispatchMessageW, GetMessageW, 
   |                                                     ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^
 9 |     LoadCursorW, PostQuitMessage, RegisterClassW, ShowWindow, TranslateMessage,
   |                  ^^^^^^^^^^^^^^^                              ^^^^^^^^^^^^^^^^
10 |     CS_HREDRAW, CS_VREDRAW, CW_USEDEFAULT, IDC_ARROW, MSG, SW_SHOW, WM_DESTROY, WNDCLASSW,
   |                                                       ^^^
11 |     WS_OVERLAPPEDWINDOW, WS_VISIBLE, WM_CREATE, WM_SIZE, SetWindowPos, SWP_NOMOVE, SWP_NOACTIVATE, SWP_NOZORDER,
   |                                                                        ^^^^^^^^^^  ^^^^^^^^^^^^^^
12 |     WS_CHILD, WS_VSCROLL, ES_MULTILINE, ES_READONLY, ES_AUTOVSCROLL, WM_SETFONT,
   |                                                                      ^^^^^^^^^^

warning: unused import: `std::thread`
 --> src\engine\worker.rs:3:5
  |
3 | use std::thread;
  |     ^^^^^^^^^^^

warning: unused variable: `parent`
  --> src\gui\console.rs:27:35
   |
27 | pub unsafe fn show_console_window(parent: HWND, initial_logs: &[String], is_dark: bool) {
   |                                   ^^^^^^ help: if this is intentional, prefix it with an underscore: `_parent`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `compactrs` (bin "compactrs") generated 11 warnings
error: could not compile `compactrs` (bin "compactrs") due to 1 previous error; 11 warnings emitted
